--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "react-vstorie",
   "description": "An easy to use React component for stories instagram like",
   "author": "Vinicius Cavalcanti Santos",
-  "version": "0.0.9",
+  "version": "0.0.11",
   "private": false,
   "type": "module",
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.js"
     }
   },
   "files": [
